[gd_scene load_steps=15 format=3 uid="uid://2m3k4aiejol7"]

[ext_resource type="Script" path="res://scripts/enemy2_root.gd" id="1_b7f3y"]
[ext_resource type="Script" path="res://scripts/enemy2.gd" id="2_aajby"]
[ext_resource type="Texture2D" uid="uid://c0xava1vat3py" path="res://png/bomb2/texture.sprites/bomb3.tres" id="7_b7bsl"]
[ext_resource type="Texture2D" uid="uid://bmdvg76ndicy0" path="res://png/bomb2/texture.sprites/bomb4.tres" id="8_eb0mi"]
[ext_resource type="Texture2D" uid="uid://cefo3mtqok0p3" path="res://png/bomb2/texture.sprites/bomb5.tres" id="9_inm84"]
[ext_resource type="Texture2D" uid="uid://4edrjosri0w0" path="res://png/bomb2/texture.sprites/bomb6.tres" id="10_elpau"]
[ext_resource type="Texture2D" uid="uid://c2x7vob8uojcw" path="res://png/enemy2/texture.sprites/enemy2-1.tres" id="10_x8vnx"]
[ext_resource type="Texture2D" uid="uid://siub5i1s4mgo" path="res://png/enemy2/texture.sprites/enemy2-2.tres" id="11_6uj57"]
[ext_resource type="Texture2D" uid="uid://blfkg0qjv77n3" path="res://png/bomb2/texture.sprites/bomb7.tres" id="11_tgge0"]
[ext_resource type="Texture2D" uid="uid://chgwa1e1eip26" path="res://png/bomb2/texture.sprites/bomb8.tres" id="12_20l34"]
[ext_resource type="Texture2D" uid="uid://6pav8mjur45h" path="res://png/bomb2/texture.sprites/bomb9.tres" id="13_wqjkv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_c03fs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_b7bsl")
}, {
"duration": 1.0,
"texture": ExtResource("8_eb0mi")
}, {
"duration": 1.0,
"texture": ExtResource("9_inm84")
}, {
"duration": 1.0,
"texture": ExtResource("10_elpau")
}, {
"duration": 1.0,
"texture": ExtResource("11_tgge0")
}, {
"duration": 1.0,
"texture": ExtResource("12_20l34")
}, {
"duration": 1.0,
"texture": ExtResource("13_wqjkv")
}],
"loop": false,
"name": &"dead",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_x8vnx")
}, {
"duration": 1.0,
"texture": ExtResource("11_6uj57")
}],
"loop": true,
"name": &"idle",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h2m0g"]
size = Vector2(47.9966, 39.5212)

[sub_resource type="Curve2D" id="Curve2D_83tgj"]
bake_interval = 0.01
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -4.01587, -4.98726, -12.2214, -65.3686, 12.2214, 65.3686, 424.303, 94.6518, 2.41499, -81.0799, -2.41499, 81.0799, 104.483, 151.669, 17.6452, -60.7059, -17.6452, 60.7059, 464.735, 230.524, 6.75187, -100.431, -6.75187, 100.431, 80.9913, 311.744, 4.29011, -64.4412, -4.29011, 64.4412, 449.167, 366.574, 13.8454, -93.3826, -13.8454, 93.3826, 57.4491, 455.82, -13.4482, -73.5798, 13.4482, 73.5798, 465.676, 526.522, -15.8664, -97.5308, 15.8664, 97.5308, 57.9577, 615.819, -17.2477, -81.1188, 17.2477, 81.1188, 474.083, 654.496, -7.06298, -103.245, 7.06298, 103.245, 42.3647, 743.869, -2.15175, -83.0545, 2.15175, 83.0545, 442.82, 886.597, 0, 0, 0, 0, 27.0513, 959.919)
}
point_count = 13

[node name="enemy2" type="Node2D"]
script = ExtResource("1_b7f3y")

[node name="body" type="Area2D" parent="." groups=["enemy"]]
position = Vector2(4, -5)
rotation = -0.0118196
script = ExtResource("2_aajby")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="body"]
position = Vector2(3.93904, 5.04567)
scale = Vector2(0.172516, 0.163601)
sprite_frames = SubResource("SpriteFrames_c03fs")
animation = &"idle"

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="body"]
position = Vector2(0, 4)

[node name="fire" type="Marker2D" parent="body"]
position = Vector2(-0.632317, 15.0221)

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
position = Vector2(3.75151, 9.28464)
shape = SubResource("RectangleShape2D_h2m0g")
one_way_collision_margin = 0.1

[node name="bullets" type="Node2D" parent="."]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(8, 0)
rotation = 0.00317857
curve = SubResource("Curve2D_83tgj")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(-4.01587, -4.98726)
rotation = 0.881233
rotates = false
loop = false

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="Path2D/PathFollow2D"]
rotation = -0.888226
remote_path = NodePath("../../../body")
update_rotation = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="goods_timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="area_entered" from="body" to="body" method="_on_area_entered"]
[connection signal="tree_exiting" from="body" to="." method="_on_body_tree_exiting"]
[connection signal="screen_exited" from="body/VisibleOnScreenNotifier2D" to="body" method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="goods_timer" to="body" method="_on_goods_timer_timeout"]
